--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<p>App component</p>
+<p>jhgjhjgh</p>
 
 
-<app-test1 status = "bussy"
-(onSendData)="printDataRicardoComp($event)">
+<app-test1 status="bussy" (onSendData)="printDataRicardoComp($event)">
 </app-test1>
