--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -1,6 +1,6 @@
 <div style="border: 5px red solid;">
 <p>
-my first component ricardo-comp
+my first component Michael_comp
 </p>
 <p>INPUT STATUS: {{statusTest}}</p>
 
