--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<p>jhgjhjgh</p>
+<p>asdasd</p>
 
 
-<app-test1 status="bussy" (onSendData)="printDataRicardoComp($event)">
-</app-test1>
+<michael-comp [status]="myStatus"  (onSendData)="printDataMichaelComp($event)">
+</michael-comp>
