--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <p>asdasd</p>
 
-
 <michael-comp [status]="myStatus" (onSendData)="printDataMichaelComp($event)">
 </michael-comp>
+
+<app-test2 name="Michael" lastName="Velarde" (onSendData)="printData($event)">
+</app-test2>
