--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,11 @@
 
 <app-test2 name="Michael" lastName="Velarde" (onSendData)="printData($event)">
 </app-test2>
+ 
+<input type = "text" [(ngModel)]= "myStatus" >
+<button (click)= "sw = !sw">show Test3 </button>
+<div *ngIf="sw">
+<app-test3
+[name]="myStatus">
+   </app-test3>
+</div>
