Show list with *ngFor  08/11/2021

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,3 +51,15 @@
   'est2': color ==='hola1',
   'est3': color ==='hola2'
 }" >My div with class</div>
+<p>Tarea: </p>
+
+<ul>
+<li *ngFor="let item of [
+{name: 'juan', lastName: 'gutierrez'},
+{name: 'maria', lastName: 'quiroz'},
+{name: 'marco', lastName: 'paredes'},
+{name: 'pedro', lastName: 'mamani'}
+]">
+{{item.name}} {{item.lastName}}
+</li>
+</ul>
