08/12/2021 TikTok Observer with BehaviourSubjec

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <p>App Component</p>
+<button directive1Test (click)="onAddVideo()">add Video</button>
+<button  directive1Test (click)="person1Unsubscribe()">Uns PersonA</button>
+<p>fin del tiktok</p>
  
 <input type = "text" [(ngModel)]= "myStatus" >
 <button (click)= "sw = !sw">show Test3 </button>
