Change div border with viewChild 08/17/2021

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,8 @@
   <p>my own strcutural directive </p>
 
 </div>
-<div #myDiv1>contnet</div>
+<div #myDiv1>Div para el ejercicio de cambiar borde.</div>
+
 <p>{{myDiv1}}</p>
 
 <michael-comp #myCompMichael></michael-comp>
