--- a/src/app/pages/admin/admin1/admin1.component.html
+++ b/src/app/pages/admin/admin1/admin1.component.html
@@ -14,3 +14,8 @@ ADMIN 1 COMP
 <app-loader></app-loader>
 <app-card></app-card>
 </div>
+<p *ngFor="let item of auxObs$ | async">
+{{item}}
+</p>
+
+<button (click)="onAdd()">add</button>
