--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,3 +24,6 @@ I am a simple static toast.
 </ngb-toast>
 
 <hr>
+
+<mat-spinner [diameter]="30" [color]="'accent'"></mat-spinner>
+<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
