--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "styles/main";
-
 @import "~bootstrap/scss/bootstrap";
-
-@import "@angular/material/prebuilt-themes/purple-green.css";
+//@import "@angular/material/prebuilt-themes/purple-green.css";
