--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,4 @@
 <button (click)="setMessage()">set message</button>
 <button routerLink="../pages">pages</button>
+<app-login1></app-login1>
+<app-login2></app-login2>
