--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,30 +9,24 @@
   
 <div *ngFor="let wallet of wallets">
 <app-bitcoin
- [wallet]="wallet.wallet"
- [name]="wallet.name"
- [eth]="wallet.eth"
- [btc]="wallet.btc">
+ [wallet]="wallet[1]['wallet']"
+ [name]="wallet[1]['name']"
+ [eth]="wallet[1]['eth']"
+ [btc]="wallet[1]['btc']">
 </app-bitcoin>
 </div>
 </div>
 <p>Transactions</p>
-<div *ngIf=allTransactionDone() [style.background]="'red'"> There are not transactions </div>
-<div style="display: flex; flexDirection: row;">
-  
-<div *ngFor="let transaction of transactions; let i = index">
-<div [style.background]="transaction.mineType ==='PoW' ? 'yellow' : 'green'" style="float: left; margin: 10px; padding: 10px;">
-<p>date: {{(transaction.date | strToDate)|date:'dd/MM/yyyy'}}</p>
-<p>from: {{transaction.from}}</p>
-<p>to: {{transaction.to}}</p>
-<p>quantity: {{transaction.quantity}}</p>
-<p>moneyType: {{transaction.moneyType | uppercase}}</p>
-<p>mineType: {{transaction.mineType}}</p>
-<p>miner: {{transaction.miner}}</p>
-<button (click)="onTransaction(i)" [disabled]="!sePuedeMinar(transaction.mined , transaction.miner, transaction.mineType)">
-mine
+<div style="display: flex; flex-direction: row">
+<div *ngFor="let transactions of transactions">
+  <app-transaction [id]="transactions[0]" [date]="transactions[1]['date']" [from]="transactions[1]['from']"  [to]="transactions[1]['to']"  [quantity]="transactions[1]['quantity']"  [moneyType]="transactions[1]['moneyType']"  [mineType]="transactions[1]['mineType']"  [miner]="transactions[1]['miner']" >
+  <button
+  [disabled]="transactions[1]['mineType'] === 'PoS' &&
+  transactions[1]['miner'] < 20"
+(click)="onMine(transactions[0])">
+  mine
 </button>
 
-</div>
+  </app-transaction>
 </div>
 </div>
