--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -161,11 +161,11 @@
 .container .right p a:hover {
   text-decoration: underline;
 }
-
+/*
 .ng-valid {
   border: 4px solid green;
 }
 
 .ng-invalid.ng-touched{
   border: 4px solid red;
-}
+}*/
