--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,30 @@
-<button (click)="onShowMessage()">show message</button>
+<app-header></app-header>
+
+<!-- main body starts -->
+<div class="main__body">
+
+  <app-sidebar class="col-12 col-sm-12 col-md-6 col-lg-2 col-xl-2">
+  </app-sidebar>
+
+  <div class="feed col-12 col-sm-12 col-md-6 col-lg-8 col-xl-8">
+    <div class="storyReel">
+
+      <ng-container *ngFor="let post of [1,2,3,4,5,6]">
+        <app-story></app-story>
+      </ng-container>
+
+    </div>
+
+    <app-message-sender></app-message-sender>
+
+    <ng-container *ngFor="let post of [1,2,3,4]">
+      <app-post></app-post>
+    </ng-container>
+  </div>
+
+  <div class="col-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"></div>
+
+</div>
+<!-- main body ends -->
+
+<div id="fb-root"></div>
