09/09/2021 sign up with firebase

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,8 @@
         </form>
 
         <div class="underline"></div>
-        <button class="create-new-account-btn" type="submit">
+        <button class="create-new-account-btn"
+                (click)="onCreateNewAccount()">
           Create New Account
         </button>
       </mat-card-content>
